--- a/libs/scully/package.json
+++ b/libs/scully/package.json
@@ -22,6 +22,7 @@
     "front-matter": "^4.0.2",
     "fs-extra": "^9.0.1",
     "guess-parser": "^0.4.18",
+    "highlight.js": "^10.1.0",
     "jsdom": "^16.2.2",
     "jsonc": "2.0.0",
     "marked": "^1.1.0",
@@ -30,13 +31,13 @@
     "selfsigned": "^1.10.7",
     "ws": "^7.3.0",
     "yamljs": "^0.3.0",
-    "yargs": "^15.3.1",
-    "highlight.js": "^10.1.0"
+    "yargs": "^15.3.1"
   },
   "devDependencies": {
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.0",
+    "@types/http-proxy-middleware": "^0.19.3",
     "@types/jsdom": "^16.1.0",
     "@types/marked": "^0.7.0",
     "@types/node": "^13.13.5",
